--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 									<div class="timeline-entry-inner">
 	
 									   <div :class="'timeline-icon color-'+(index+1)">
-										  <i class="icon-pen2"></i>
+										  <i class="icon-book"></i>
 									   </div>
 									   <div class="timeline-label">
 											<h2><span class="text-primary">{{ $i18n.messages[$i18n.locale].experience.item[index].position }}</span>
@@ -374,7 +374,7 @@
 									 <div class="timeline-entry-inner">
 	 
 										<div :class="'timeline-icon color-'+(index+1)">
-										   <i class="icon-pen2"></i>
+										   <i class="icon-book"></i>
 										</div>
 										<div class="timeline-label">
 											 <h2><span class="text-primary">{{ $i18n.messages[$i18n.locale].experience.item[index].position }}</span>
